# NameU

./: .gitignore  DATABASE_STRUCTURE.md  README.md  archives.db  archives.db-journal  artworks.db  main.py  pyproject.toml  pytest_output.txt  reproduce_issue.py  rule.md  run_test_blacklist.py  simple_test.py  test_optimization.py  test_s2p.txt  test_ui.py  test_uuid_fix.py
.kiro/specs/trename-cli/: design.md  requirements.md  tasks.md
src/antid/tools/: config.toml  delete_files_from_archive.py
src/coveru/: __main__.py  auto_cover.py  config.toml
src/dela/: README.md  __main__.py
src/idset/: __init__.py  core.py
src/idset/example/: example.py
src/idu/: __main__.py  auto_uuid.py
src/idu/core/: __init__.py  archive_handler.py  archive_processor.py  json_handler.py  legacy_json_utils.py  main.py  path_handler.py  test_archive_handler.py  uuid_handler.py  uuid_record_manager.py  yaml_handler.py
src/idu/sql/: db_manager.py  import_json_to_db.py  test_db_manager.py  test_db_manager_pytest.py
src/idu/tools/: analyze_size.py  fix_json_location.py  move_json_to_folder.py
src/nameset/: __init__.py  __main__.py  cli.py  database.py  examples.py  id_handler.py  integration.py  manager.py  test_system.py
src/nameset/metadata/: metadata_cli.py  metadata_demo.py
src/nameset/restore/: DATABASE_STRUCTURE.md  restore.py  restore_tool.py
src/namet/type/: file_type_detector.py  filter_manager.py
src/namet/type/demo/: test_all.py  test_filter_folder.py
src/nameu/: Taskfile.yml  __main__.py  nameu.toml  one_name.py  vokein.py
src/nameu/core/: __init__.py  archive_manager.py  config.py  constants.py  file_processor.py  filename_patterns.json  filename_patterns.toml  filename_processor.py  logger_config.py  nameset_integration.py  pattern_config.py  progress.py  sensitive_word_processor.py
src/nameu/core/lexicons/Sensitive-lexicon/ThirdPartyCompatibleFormats/TrChat/: SensitiveLexicon.json
src/nameu/utils/: namer.py
src/nodes/comic/name/: file_processor.py  filename_processor.py  logger_config.py
src/nodes/comic/uuid/: __init__.py  archive_handler.py  archive_processor.py  json_handler.py  main.py  path_handler.py  uuid_handler.py  uuid_record_manager.py  yaml_handler.py
src/pathr/: __init__.py  cli.py  core.py
src/samea/: __main__.py
src/samea/utils/: move_artist_folders.py
src/sensi2pinyin/: README.md  __init__.py  __main__.py  processor.py
src/snu/: __main__.py
src/timeu/: __main__.py
src/timeu/utils/: archive_folders.py  extract_timestamp.py  input_path.py  main.py  sync_file_time.py
src/timex/: __init__.py  __main__.py  core.py
src/trename/: app.py  cli.py  renamer.py  scanner.py  validator.py
src/tsync/: __main__.py
tests/: OPTIMIZATION_SUMMARY.md  repro_dup.py  test_bandizip.py  test_duplicate_rename.py  test_filename_fix.py  test_pathr_restore.py  test_performance.py  test_timeu_timestamp.py  test_trename.py
